--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "apollo-server-express": "^2.9.9",
     "express": "^4.17.1",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "mongoose": "^5.7.12"
   },
   "devDependencies": {
     "ts-node-dev": "^1.0.0-pre.44"
