Defined connection to MongoDB and type for mongoose project schema.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
+    "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-  }
+    "allowSyntheticDefaultImports": true,
+  },
+  "include": [
+    "src",
+    "configs"
+  ]
 }
