--- a/client/package.json
+++ b/client/package.json
@@ -10,5 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.11.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
