--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.11.0"
+    "react": "^16.11.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.2",
