--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-client": "^2.6.4",
+    "graphql-tag": "^2.10.1",
     "react": "^16.11.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
