--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,24 @@
   "name": "js_projects_orga_client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": ".eslintrc.js",
   "scripts": {
     "dev": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.13",
+    "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
