--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "module":"es6",
+    "moduleResolution": "node",
     "target": "es5",
     "jsx": "react",
     "allowJs": true
