--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
-    "dev": "webpack-dev-server"
+    "dev": "set NODE_ENV=development&&webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
