--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.15",
