--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.2",
